--- a/DroidDailer/AndroidManifest.xml
+++ b/DroidDailer/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="com.xpdeveloper.dialer"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
         <activity android:label="@string/app_name" android:name="DroidDialer">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
