--- a/DroidDailer/AndroidManifest.xml
+++ b/DroidDailer/AndroidManifest.xml
@@ -1,17 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-      package="com.xpdeveloper.dialer"
-      android:versionCode="1"
-      android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
-        <activity android:label="@string/app_name" android:name="DroidDialer">
-            <intent-filter>
-                <action android:name="android.intent.action.MAIN" />
-                <category android:name="android.intent.category.LAUNCHER" />
-            </intent-filter>
-        </activity>
+	package="com.xpdeveloper.dialer" android:versionCode="1"
+	android:versionName="1.0">
 
-    </application>
+	<uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
 
+	<application android:icon="@drawable/icon" android:label="@string/app_name"
+		android:debuggable="true">
+
+		<activity android:label="@string/app_name" android:name=".DroidDialer">
+			<intent-filter>
+				<action android:name="android.intent.action.MAIN" />
+				<category android:name="android.intent.category.LAUNCHER" />
+			</intent-filter>
+		</activity>
+
+		<receiver android:name=".NewOutgoingCallBroadcastReceiver">
+			<!--
+				http://developer.android.com/reference/android/content/Intent.html#ACTION_NEW_OUTGOING_CALL
+			-->
+			<intent-filter>
+				<action android:name="android.intent.action.NEW_OUTGOING_CALL"></action>
+				<category android:name="android.intent.category.ALTERNATIVE"></category>
+			</intent-filter>
+		</receiver>
+
+	</application>
 
 </manifest> 
