--- a/DroidDialerTest/.classpath
+++ b/DroidDialerTest/.classpath
@@ -4,5 +4,8 @@
 	<classpathentry kind="src" path="gen"/>
 	<classpathentry combineaccessrules="false" kind="src" path="/DroidDialer"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
+	<classpathentry kind="lib" path="lib/jmock-2.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/jmock-junit3-2.5.1.jar"/>
+	<classpathentry kind="lib" path="lib/hamcrest-1.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
