--- a/DroidDialer/AndroidManifest.xml
+++ b/DroidDialer/AndroidManifest.xml
@@ -5,8 +5,8 @@
 
 	<uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
 
-	<application android:icon="@drawable/icon" android:label="@string/app_name"
-		android:debuggable="true">
+	<application android:label="@string/app_name"
+		android:debuggable="true" android:icon="@drawable/launcher">
 
 		<activity android:label="@string/app_name" android:name=".DroidDialer">
 			<intent-filter>
