--- a/DroidDialer/AndroidManifest.xml
+++ b/DroidDialer/AndroidManifest.xml
@@ -6,7 +6,7 @@
 	<uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
 
 	<application android:label="@string/app_name"
-		android:debuggable="true" android:icon="@drawable/launcher">
+		android:debuggable="true" android:icon="@drawable/ic_launcher">
 
 		<activity android:label="@string/app_name" android:name=".DroidDialer">
 			<intent-filter>
