--- a/DroidDialerTest/.classpath
+++ b/DroidDialerTest/.classpath
@@ -7,5 +7,6 @@
 	<classpathentry kind="lib" path="lib/jmock-2.5.1.jar"/>
 	<classpathentry kind="lib" path="lib/jmock-junit3-2.5.1.jar"/>
 	<classpathentry kind="lib" path="lib/hamcrest-1.1.jar"/>
+	<classpathentry kind="lib" path="lib/robotium-solo-1.3.1.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
