--- a/DroidDialer/AndroidManifest.xml
+++ b/DroidDialer/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 	package="net.xpdeveloper.dialer" android:versionCode="1"
-	android:versionName="1.0">
+	android:versionName="0.1">
 
 	<uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
 
 	<application android:label="@string/app_name"
-		android:debuggable="true" android:icon="@drawable/ic_launcher">
+		android:debuggable="false" android:icon="@drawable/ic_launcher">
 
 		<activity android:label="@string/app_name" android:name=".ToneDialActivity">
 			<intent-filter>
@@ -19,8 +19,9 @@
 
 	</application>
 	
-	<!-- Required for robotium testing -->
+	<!-- Required for robotium testing 
 	<uses-permission android:name="android.permission.GET_TASKS" />
+	-->
 	
 	<!-- Lower this when tested -->
 	<uses-sdk android:targetSdkVersion="7" android:minSdkVersion="7" />
