--- a/DroidDialer/AndroidManifest.xml
+++ b/DroidDialer/AndroidManifest.xml
@@ -6,7 +6,7 @@
 	<uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
 
 	<application android:label="@string/app_name"
-		android:debuggable="false" android:icon="@drawable/ic_launcher">
+		android:debuggable="true" android:icon="@drawable/ic_launcher">
 
 		<activity android:label="@string/app_name" android:name=".ToneDialActivity">
 			<intent-filter>
@@ -15,14 +15,18 @@
 			</intent-filter>
 		</activity>
 
-        <service android:name=".ToneDialService" />
+		<service android:name=".ToneDialService">
+			<intent-filter>
+				<action android:name="net.xpdeveloper.dialer.PREFERENCE_CHANGE" />
+			</intent-filter>
+		</service>
 
 	</application>
-	
-	<!-- Required for robotium testing 
+
+	<!-- Required for robotium testing -->
 	<uses-permission android:name="android.permission.GET_TASKS" />
-	-->
-	
+
+
 	<!-- Lower this when tested -->
 	<uses-sdk android:targetSdkVersion="7" android:minSdkVersion="7" />
 
