--- a/DroidDialer/AndroidManifest.xml
+++ b/DroidDialer/AndroidManifest.xml
@@ -18,6 +18,7 @@
 		<service android:name=".ToneDialService">
 			<intent-filter>
 				<action android:name="net.xpdeveloper.dialer.PREFERENCE_CHANGE" />
+				<action android:name="net.xpdeveloper.dialer.SERVICE_STATE_CHANGE" />
 			</intent-filter>
 		</service>
 
