--- a/DroidDialer/AndroidManifest.xml
+++ b/DroidDialer/AndroidManifest.xml
@@ -6,7 +6,7 @@
 	<uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
 
 	<application android:label="@string/app_name"
-		android:debuggable="true" android:icon="@drawable/ic_launcher">
+		android:debuggable="false" android:icon="@drawable/ic_launcher">
 
 		<activity android:label="@string/app_name" android:name=".ToneDialActivity">
 			<intent-filter>
@@ -25,8 +25,8 @@
 	</application>
 
 	<!-- Required for robotium testing
- 	-->
 	<uses-permission android:name="android.permission.GET_TASKS" />
+ 	-->
 
 	<!-- Lower this when tested -->
 	<uses-sdk android:targetSdkVersion="7" android:minSdkVersion="7" />
