--- a/ToneDialTest/.classpath
+++ b/ToneDialTest/.classpath
@@ -2,7 +2,7 @@
 <classpath>
 	<classpathentry kind="src" path="src"/>
 	<classpathentry kind="src" path="gen"/>
-	<classpathentry combineaccessrules="false" kind="src" path="/DroidDialer"/>
+	<classpathentry combineaccessrules="false" kind="src" path="/ToneDial"/>
 	<classpathentry kind="con" path="com.android.ide.eclipse.adt.ANDROID_FRAMEWORK"/>
 	<classpathentry kind="lib" path="lib/jmock-2.5.1.jar"/>
 	<classpathentry kind="lib" path="lib/jmock-junit3-2.5.1.jar"/>
