--- a/ToneDial/AndroidManifest.xml
+++ b/ToneDial/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.xpdeveloper.dialer" android:versionCode="4"
-	android:versionName="0.004">
+	package="net.xpdeveloper.dialer" android:versionCode="7"
+	android:versionName="0.007">
 
 	<uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
 
 	<application android:label="@string/app_name"
-		android:debuggable="true" android:icon="@drawable/ic_launcher">
+		android:debuggable="false" android:icon="@drawable/ic_launcher">
 
 		<activity android:label="@string/app_name" android:name=".ToneDialActivity">
 			<intent-filter>
@@ -25,8 +25,8 @@
 	</application>
 
 	<!-- Required for robotium testing
- 	-->
 	<uses-permission android:name="android.permission.GET_TASKS" />
+ 	-->
 
 	<!-- Lower this when tested -->
 	<uses-sdk android:targetSdkVersion="7" android:minSdkVersion="7" />
