--- a/ToneDial/AndroidManifest.xml
+++ b/ToneDial/AndroidManifest.xml
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.xpdeveloper.dialer" android:versionCode="8"
-	android:versionName="1.000">
+	package="net.xpdeveloper.dialer" android:versionCode="9"
+	android:versionName="1.001">
 
 	<uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
 
@@ -24,9 +24,9 @@
 
 	</application>
 
-	<!-- Required for robotium testing
+	<!-- Required for robotium 
 	<uses-permission android:name="android.permission.GET_TASKS" />
- 	-->
+	testing 	-->
 
 	<!-- Lower this when tested -->
 	<uses-sdk android:targetSdkVersion="4" android:minSdkVersion="4" />
