--- a/ToneDial/AndroidManifest.xml
+++ b/ToneDial/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.xpdeveloper.dialer" android:versionCode="9"
-	android:versionName="1.001">
+	package="net.xpdeveloper.dialer" android:versionCode="10"
+	android:versionName="1.100">
 
 	<uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
 
 	<application android:label="@string/app_name"
-		android:debuggable="false" android:icon="@drawable/ic_launcher">
+		android:debuggable="true" android:icon="@drawable/ic_launcher">
 
 		<activity android:label="@string/app_name" android:name=".ToneDialActivity">
 			<intent-filter>
@@ -24,11 +24,11 @@
 
 	</application>
 
-	<!-- Required for robotium 
+	<!-- Required for robotium	testing --> 
 	<uses-permission android:name="android.permission.GET_TASKS" />
-	testing 	-->
 
 	<!-- Lower this when tested -->
-	<uses-sdk android:targetSdkVersion="4" android:minSdkVersion="4" />
+	<uses-sdk android:targetSdkVersion="7" android:minSdkVersion="7" />
+
 
 </manifest> 
