--- a/ToneDial/AndroidManifest.xml
+++ b/ToneDial/AndroidManifest.xml
@@ -8,7 +8,7 @@
 	<application android:label="@string/app_name"
 		android:debuggable="true" android:icon="@drawable/ic_launcher">
 
-		<activity android:label="@string/app_name" android:name=".ToneDialActivity">
+		<activity android:label="@string/app_name" android:name=".ToneDialLimitedActivity">
 			<intent-filter>
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
