--- a/ToneDialLibrary/default.properties
+++ b/ToneDialLibrary/default.properties
@@ -7,6 +7,6 @@
 # "build.properties", and override values to adapt the script to your
 # project structure.
 
-android.library.reference.1=../ToneDialLibrary/
+android.library=true
 # Project target.
 target=android-8
