--- a/ToneDial/AndroidManifest.xml
+++ b/ToneDial/AndroidManifest.xml
@@ -13,6 +13,11 @@
 				<action android:name="android.intent.action.MAIN" />
 				<category android:name="android.intent.category.LAUNCHER" />
 			</intent-filter>
+			<intent-filter>
+				<action android:name="net.xpdeveloper.dialer.TONE_DIAL" />
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
+			
 		</activity>
 
 		<service android:name="net.xpdeveloper.dialer.common.service.ToneDialService">
