--- a/ToneDialLibrary/AndroidManifest.xml
+++ b/ToneDialLibrary/AndroidManifest.xml
@@ -3,7 +3,7 @@
       package="net.xpdeveloper.dialer.common"
       android:versionCode="1"
       android:versionName="1.0">
-    <application android:icon="@drawable/icon" android:label="@string/app_name">
+    <application android:icon="@drawable/stat_service" android:label="@string/app_name">
 
     </application>
     
