--- a/ToneDialUnlimited/AndroidManifest.xml
+++ b/ToneDialUnlimited/AndroidManifest.xml
@@ -4,13 +4,17 @@
       android:versionCode="1"
       android:versionName="1.0">
       
-    <application android:icon="@drawable/icon" android:label="@string/app_name" android:debuggable="true">
+    <application android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:debuggable="true">
         <activity android:name=".ToneDialUnlimited"
                   android:label="@string/app_name">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+			<intent-filter>
+				<action android:name="net.xpdeveloper.dialer.TONE_DIAL" />
+				<category android:name="android.intent.category.DEFAULT" />
+			</intent-filter>
         </activity>
 
     </application>
