Icons working on Cupcake - Service starting in unlimited - Not Dialing

--- a/ToneDialUnlimited/AndroidManifest.xml
+++ b/ToneDialUnlimited/AndroidManifest.xml
@@ -11,11 +11,19 @@
                 <action android:name="android.intent.action.MAIN" />
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
+
 			<intent-filter>
 				<action android:name="net.xpdeveloper.dialer.TONE_DIAL" />
 				<category android:name="android.intent.category.DEFAULT" />
 			</intent-filter>
         </activity>
+
+		<service android:name="net.xpdeveloper.dialer.common.service.ToneDialService">
+			<intent-filter>
+				<action android:name="net.xpdeveloper.dialer.PREFERENCE_CHANGE" />
+				<action android:name="net.xpdeveloper.dialer.SERVICE_STATE_CHANGE" />
+			</intent-filter>
+		</service>
 
     </application>
 
