Unlimited dialing - Did not have DIAL permission - TODO how will tests run on both configs?

--- a/ToneDialUnlimited/AndroidManifest.xml
+++ b/ToneDialUnlimited/AndroidManifest.xml
@@ -27,6 +27,8 @@
 
     </application>
 
+	<uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
+
 	<!-- Required for robotium	testing --> 
 	<uses-permission android:name="android.permission.GET_TASKS" />
 
