--- a/ToneDial/AndroidManifest.xml
+++ b/ToneDial/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-	package="net.xpdeveloper.dialer" android:versionCode="10"
-	android:versionName="1.100">
+	package="net.xpdeveloper.dialer" android:versionCode="20"
+	android:versionName="2.000">
 
 	<application android:label="@string/app_name"
-		android:debuggable="true" android:icon="@drawable/ic_launcher">
+		android:debuggable="false" android:icon="@drawable/ic_launcher">
 
 		<activity android:label="@string/app_name" android:name=".ToneDialLimitedActivity">
 			<intent-filter>
@@ -29,8 +29,9 @@
 
 	<uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
 
-	<!-- Required for robotium	testing --> 
+	<!-- Required for robotium	testing 
 	<uses-permission android:name="android.permission.GET_TASKS" />
+	-->
 
 	<!-- Lower this when tested -->
 	<uses-sdk android:targetSdkVersion="3" android:minSdkVersion="3" />
