--- a/ToneDialUnlimited/AndroidManifest.xml
+++ b/ToneDialUnlimited/AndroidManifest.xml
@@ -1,10 +1,10 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
       package="net.xpdeveloper.dialer.unlimited"
-      android:versionCode="1"
-      android:versionName="1.0">
+      android:versionCode="20"
+      android:versionName="2.000">
       
-    <application android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:debuggable="true">
+    <application android:icon="@drawable/ic_launcher" android:label="@string/app_name" android:debuggable="false">
         <activity android:name=".ToneDialUnlimited"
                   android:label="@string/app_name">
             <intent-filter>
@@ -29,8 +29,9 @@
 
 	<uses-permission android:name="android.permission.PROCESS_OUTGOING_CALLS" />
 
-	<!-- Required for robotium	testing --> 
+	<!-- Required for robotium	testing 
 	<uses-permission android:name="android.permission.GET_TASKS" />
+	-->
 
     <uses-sdk android:minSdkVersion="3" />
 
